--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "nodemon": "^2.0.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -36,4 +38,6 @@
       "last 1 safari version"
     ]
   }
+
+  
 }
